--- a/index.html
+++ b/index.html
@@ -1,11 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <!-- header -->
+    <header>
+
+    </header>
+
+    <!-- Home -->
+    <section id="home">
+
+    </section>
+
+    <!-- Check Availability -->
+    <section class="availability">
+
+    </section>
+
+    <!-- About -->
+    <section id="about">
+
+    </section>
+
+    <!-- Room -->
+    <section id="room">
+
+    </section>
+
+    <!-- Gallery -->
+    <section id="gallery">
+
+    </section>
+
+    <!-- Review -->
+    <section id="review">
+
+
+    </section>
+
+    <!-- FAQ -->
+    <section id="faq">
+
+
+    </section>
 </body>
+
 </html>
