added room section and gallery section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./assets/style.css">
+    <title>room Booking</title>
 </head>
 
 <body>
@@ -30,12 +35,158 @@
 
     <!-- Room -->
     <section id="room">
+        <h2 class="section__header">Rooms</h2>
+        <div class="card-grid-4">
+            <a class="room-item" href="#">
+                <img src="./assets/images/room-1.jpg" alt="room-1">
+                <div class="room-item__info">
+                    <div class="room-item__title">Grand Deluxe Room</div>
+                    <div class="room-item__description">
+                        Embrace Paris in its purest neo-classical style, where
+                        up-to-the-minute amenities rub along with the charms of the past. You have to try our canopy
+                        beds at least once.
+                    </div>
+                </div>
+                <ul class="room-features__list">
+                    <li class="room-features__list-item">
+                        <img src="./assets/images/icon-1.png" alt="icon-1">
+                        Up to 3 guests
+                    </li>
+                    <li class="room-features__list-item">
+                        <img src="./assets/images/icon-2.png" alt="icon-2">
+                        King size bed
+                    </li>
+                    <li class="room-features__list-item">
+                        <img src="./assets/images/icon-3.png" alt="">
+                        47 m² / 506 sq. ft.
+                    </li>
+                </ul>
+            </a>
+            <a class="room-item" href="#">
+                <img src="./assets/images/room-2.jpg" alt="room-2">
+                <div class="room-item__info">
+                    <div class="room-item__title">Deluxe Room</div>
+                    <div class="room-item__description">
+                        In your canopy bed, gazing past prints from the Grand Siècle at your own marble fireplace, every
+                        guest can feel like royalty. Each Deluxe room is subtly distinctive; each is equally refined.
+                    </div>
+                </div>
+                <ul class="room-features__list">
+                    <li class="room-features__list-item">
+                        <img src="./assets/images/icon-1.png" alt="icon-1">
+                        Up to 3 guests
+                    </li>
+                    <li class="room-features__list-item">
+                        <img src="./assets/images/icon-2.png" alt="icon-2">
+                        King size bed
+                    </li>
+                    <li class="room-features__list-item">
+                        <img src="./assets/images/icon-3.png" alt="">
+                        40 m² / 431 sq. ft.
+                    </li>
+                </ul>
+            </a>
+            <a class="room-item" href="#">
+                <img src="./assets/images/room-3.jpg" alt="room-3">
+                <div class="room-item__info">
+                    <div class="room-item__title">Executive Room</div>
+                    <div class="room-item__description">
+                        Surround yourself with the quintessence of Parisian chic in a spacious, bright Executive Room at
+                        the Ritz Paris. A desk, an armchair, a fireplace and for some a rooftop view – and of course, a
+                        majestic king size canopy bed to call your own. And then, outside, ‘le tout Paris’!
+                    </div>
+                </div>
+                <ul class="room-features__list">
+                    <li class="room-features__list-item">
+                        <img src="./assets/images/icon-1.png" alt="icon-1">
+                        Up to 2 guests
+                    </li>
+                    <li class="room-features__list-item">
+                        <img src="./assets/images/icon-2.png" alt="icon-2">
+                        King size bed
+                    </li>
+                    <li class="room-features__list-item">
+                        <img src="./assets/images/icon-3.png" alt="">
+                        34 m² / 366 sq. ft.
+                    </li>
+                </ul>
+            </a>
+            <a class="room-item" href="#">
+                <img src="./assets/images/room-4.jpg" alt="room-4">
+                <div class="room-item__info">
+                    <div class="room-item__title">Superior Room</div>
+                    <div class="room-item__description">
+                        Our Superior Rooms feature marble fireplaces, elaborate mirrors and sumptuous bathrooms.
+                        Unforgettable.
+                    </div>
+                </div>
+                <ul class="room-features__list">
+                    <li class="room-features__list-item">
+                        <img src="./assets/images/icon-1.png" alt="icon-1">
+                        Up to 3 guests
+                    </li>
+                    <li class="room-features__list-item">
+                        <img src="./assets/images/icon-2.png" alt="icon-2">
+                        King size bed
+                    </li>
+                    <li class="room-features__list-item">
+                        <img src="./assets/images/icon-3.png" alt="">
+                        30 m² / 323 sq. ft.
+                    </li>
+                </ul>
+            </a>
 
+    </section>
+
+    <section class="service">
+        <h2 class="section__header">Services</h2>
+        <div class="card-grid-6">
+            <div class="service-item">
+                <img src="./assets/images/service-1.jpg" alt="service-1">
+                <div class="service-item__name">Swimming Pool</div>
+            </div>
+            <div class="service-item">
+                <img src="./assets/images/service-2.jpg" alt="service-2">
+                <div class="service-item__name">Restaurant</div>
+            </div>
+            <div class="service-item">
+                <img src="./assets/images/service-3.jpg" alt="service-3">
+                <div class="service-item__name">Spa Treatments</div>
+            </div>
+            <div class="service-item">
+                <img src="./assets/images/service-4.jpg" alt="service-4">
+                <div class="service-item__name">Fitness</div>
+            </div>
+            <div class="service-item">
+                <img src="./assets/images/service-5.jpg" alt="service-5">
+                <div class="service-item__name">Resort Beach</div>
+            </div>
+        </div>
     </section>
 
     <!-- Gallery -->
     <section id="gallery">
-
+        <h2 class="section__header">Gallery</h2>
+        <div class="gallery-wrapper">
+            <div class="gallery-item">
+                <img src="./assets/images/gallery-1.jpg" alt="gallery-1">
+            </div>
+            <div class="gallery-item">
+                <img src="./assets/images/gallery-2.jpg" alt="gallery-2">
+            </div>
+            <div class="gallery-item">
+                <img src="./assets/images/gallery-3.jpg" alt="gallery-3">
+            </div>
+            <div class="gallery-item">
+                <img src="./assets/images/gallery-4.jpg" alt="gallery-4">
+            </div>
+            <div class="gallery-item">
+                <img src="./assets/images/gallery-5.jpg" alt="gallery-5">
+            </div>
+            <div class="gallery-item">
+                <img src="./assets/images/gallery-6.jpg" alt="gallery-6">
+            </div>
+        </div>
     </section>
 
     <!-- Review -->
