--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
+        <!-- font awesome cdn link  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <!-- swiper js cdn link -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./assets/style.css">
     <title>room Booking</title>
 </head>
 
 <body>
     <!-- header -->
-    <header>
+    <header class="header">
+
+        <div id="menu-btn" class="fas fa-bars"></div>
 
     </header>
 
@@ -182,17 +188,215 @@
         </div>
     </section>
 
-    <!-- Review -->
-    <section id="review">
+    <!-- review -->
 
+    <section class="review" id="review">
+
+        <div class="swiper review-slider">
+            <div class="swiper-wrapper">
+
+                <div class="swiper-slide slide">
+                    <h2 class="heading">client's review</h2>
+                    <i class="fas fa-quote-right"></i>
+                    <p>I am very satisfied with the quality of service at the hotel. The breakfast is delicious,
+                        the rooms are clean.The staff is very happy, sociable, especially the director is very friendly.
+                        Very convenient in traveling for transfer. I think everyone should have an experience
+                        during summer vacation with your family</p>
+                    <div class="user">
+                        <img src="images/pic-1.png" alt="">
+                        <div class="user-info">
+                            <h3>John Devil</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <h2 class="heading">client's review</h2>
+                    <i class="fas fa-quote-right"></i>
+                    <p>I recently stayed at the Hotel and it was one of the best hotel experiences I've ever had.
+                        From the moment I walked in, I was greeted by a friendly staff. The room was spotless with
+                        all the amenities you could ask for, and the view from my window was breathtaking. The location
+                        of the hotel is also perfect - right in the heart with easy access to all of the city's
+                        attractions.</p>
+                    <div class="user">
+                        <img src="images/pic-2.png" alt="">
+                        <div class="user-info">
+                            <h3>My Linh</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <h2 class="heading">client's review</h2>
+                    <i class="fas fa-quote-right"></i>
+                    <p>I had a great stay at hotel. Rooms were clean and made up everyday. We were on the 10th floor
+                        and has a good view of the streets down. Staff are very sweet and courteous. Most of them don't
+                        speak
+                        English which is a bit hard at times. But overall a good hotel.</p>
+                    <div class="user">
+                        <img src="images/pic-3.png" alt="">
+                        <div class="user-info">
+                            <h3>Victoria</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <h2 class="heading">client's review</h2>
+                    <i class="fas fa-quote-right"></i>
+                    <p>It was a wonderful place. It has friendly and lovely staff, clean rooms and a great breakfast.
+                        I will definitely visit again.</p>
+                    <div class="user">
+                        <img src="images/pic-4.png" alt="">
+                        <div class="user-info">
+                            <h3>Lan Huong</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <h2 class="heading">client's review</h2>
+                    <i class="fas fa-quote-right"></i>
+                    <p>The hotel is clean, the staff is friendly, has a beautiful view of city, especially the rooftop
+                        swimming pool is very long and has a beautiful view suitable for checking in. Reasonable price.
+                    </p>
+                    <div class="user">
+                        <img src="images/pic-5.png" alt="">
+                        <div class="user-info">
+                            <h3>Duc Viet</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <h2 class="heading">client's review</h2>
+                    <i class="fas fa-quote-right"></i>
+                    <p>The hotel is clean, close to the center, so it is convenient to travel and shop. When standing
+                        on the rooftop of the hotel, the city view is very nice. The hotel has clean and fully equipped
+                        rooms, breakfast with a variety of dishes.</p>
+                    <div class="user">
+                        <img src="images/pic-6.png" alt="">
+                        <div class="user-info">
+                            <h3>Kieu Trinh</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="swiper-pagination"></div>
+        </div>
 
     </section>
 
-    <!-- FAQ -->
-    <section id="faq">
+    <!-- end -->
 
+    <!-- faq -->
+
+    <section class="faqs" id="faq">
+
+        <h1 class="heading">frequently asked questions</h1>
+
+        <div class="row">
+
+            <div class="image">
+                <img src="images/FAQs.gif" alt="">
+            </div>
+
+            <div class="content">
+
+                <div class="box active">
+                    <h3>How much is the room rate? What types of rooms are available to choose from?</h3>
+                    <p>The room rate varies depending on the room type and the travel season. Please check our website
+                        for detailed information on prices and available room types.</p>
+                </div>
+
+                <div class="box">
+                    <h3>Does the hotel have a restaurant, bar, swimming pool, gym, and spa?</h3>
+                    <p>We have a restaurant, bar, swimming pool, gym, and spa to ensure a great experience for our
+                        guests.
+                        Please check our website for more detailed information about the common facilities.</p>
+                </div>
+
+                <div class="box">
+                    <h3>Are there reviews and feedback from previous customers?</h3>
+                    <p>We have reviews and feedback from previous customers to give you an overview of the quality of
+                        service and experience at the hotel. You can find these reviews on our website.</p>
+                </div>
+
+                <div class="box">
+                    <h3>Is the hotel located near attractions and the city center?</h3>
+                    <p>We are conveniently located near attractions and the city center.</p>
+                </div>
+
+                <div class="box">
+                    <h3>What are the check-in and check-out times?</h3>
+                    <p>Typically, the check-in time is from 2:00 PM onwards, and the check-out time is before 12:00 PM
+                        noon.</p>
+                </div>
+
+                <div class="box">
+                    <h3>What amenities are included in the room?</h3>
+                    <p>Room amenities include air conditioning, TV, refrigerator, complimentary drinks, and other
+                        facilities.
+                        Details of room amenities can be found on our website.</p>
+                </div>
+
+            </div>
+
+        </div>
 
     </section>
+
+    <!-- end -->
+
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
+    <script src="script.js"></script>
+
+
 </body>
 
 </html>
