--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         Very convenient in traveling for transfer. I think everyone should have an experience
                         during summer vacation with your family</p>
                     <div class="user">
-                        <img src="images/pic-1.png" alt="">
+                        <img src="./assets/images/pic-1.png" alt="">
                         <div class="user-info">
                             <h3>John Devil</h3>
                             <div class="stars">
@@ -226,7 +226,7 @@
                         of the hotel is also perfect - right in the heart with easy access to all of the city's
                         attractions.</p>
                     <div class="user">
-                        <img src="images/pic-2.png" alt="">
+                        <img src="./assets/images/pic-2.png" alt="">
                         <div class="user-info">
                             <h3>My Linh</h3>
                             <div class="stars">
@@ -248,7 +248,7 @@
                         speak
                         English which is a bit hard at times. But overall a good hotel.</p>
                     <div class="user">
-                        <img src="images/pic-3.png" alt="">
+                        <img src="./assets/images/pic-3.png" alt="">
                         <div class="user-info">
                             <h3>Victoria</h3>
                             <div class="stars">
@@ -268,7 +268,7 @@
                     <p>It was a wonderful place. It has friendly and lovely staff, clean rooms and a great breakfast.
                         I will definitely visit again.</p>
                     <div class="user">
-                        <img src="images/pic-4.png" alt="">
+                        <img src="./assets/images/pic-4.png" alt="">
                         <div class="user-info">
                             <h3>Lan Huong</h3>
                             <div class="stars">
@@ -289,7 +289,7 @@
                         swimming pool is very long and has a beautiful view suitable for checking in. Reasonable price.
                     </p>
                     <div class="user">
-                        <img src="images/pic-5.png" alt="">
+                        <img src="./assets/images/pic-5.png" alt="">
                         <div class="user-info">
                             <h3>Duc Viet</h3>
                             <div class="stars">
@@ -310,7 +310,7 @@
                         on the rooftop of the hotel, the city view is very nice. The hotel has clean and fully equipped
                         rooms, breakfast with a variety of dishes.</p>
                     <div class="user">
-                        <img src="images/pic-6.png" alt="">
+                        <img src="./assets/images/pic-6.png" alt="">
                         <div class="user-info">
                             <h3>Kieu Trinh</h3>
                             <div class="stars">
@@ -341,7 +341,7 @@
         <div class="row">
 
             <div class="image">
-                <img src="images/FAQs.gif" alt="">
+                <img src="./assets/images/FAQs.gif" alt="">
             </div>
 
             <div class="content">
