--- a/index.html
+++ b/index.html
@@ -394,8 +394,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
-    <script src="script.js"></script>
-
+    <script src="./assets/script.js"></script>
 
 </body>
 
