--- a/index.html
+++ b/index.html
@@ -390,11 +390,58 @@
     </section>
 
     <!-- end -->
+    <!-- footer -->
 
+    <section class="footer">
+
+    <div class="box-container">
+
+       <div class="box">
+            <h3>CONTACT INFO</h3>
+            <a href="#"> <i class="fas fa-phone"></i> 0962189639 </a>
+            <a href="#"> <i class="fas fa-phone"></i> 0905168679</a>
+            <a href="#"> <i class="fas fa-envelope"></i> nhom9@gmail.com</a>
+            <a href="#"> <i class="fas fa-map"></i> Thu Duc, TP Ho Chi Minh, Viet Nam</a>
+       </div>
+
+       <div class="box">
+            <h3>QUICK LINKS</h3>
+            <a href="#"> <i class="fas fa-arrow-right"></i> Home</a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> About</a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> Rooms</a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> Gallery</a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> Review</a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> Faqs</a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> Reservation</a>
+       </div>
+
+        <div class="box">
+            <h3>EXTRA LINKS</h3>
+            <a href="#"> <i class="fas fa-arrow-right"></i> refund policy</a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> refund policy</a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> refund policy</a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> refund policy</a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> refund policy</a>
+        </div>
+
+    </div>
+
+    <div class="share">
+        <a href="#" class="fab fa-facebook-f"></a>
+        <a href="#" class="fab fa-instagram"></a>
+        <a href="#" class="fab fa-twitter"></a>
+        <a href="#" class="fab fa-pinterest"></a>
+    </div>
+
+    <div class="credit">&copy; copyright @ 2023 by <span>nhom9</span></div>
+
+ </section>
+
+ <!-- end -->
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
-    <script src="script.js"></script>
+    <script src="./assets/script.js"></script>
 
 
 </body>
