--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <a href="#" class="logo"> <i class="fas fa-hotel"></i> Booking hotel </a>
 
         <nav class="navbar">
-            <a href="#home">HOME</a>
-            <a href="#about">ABOUT</a>
-            <a href="./room.html">ROOM</a>
-            <a href="#gallery">GALLERY</a>
-            <a href="#review">REVIEW</a>
-            <a href="#faq">FAQ</a>
+            <a href="#home"><span class="current-section">HOME</span></a>
+            <a href="#about"><span class="">ABOUT</span></a>
+            <a href="./room.html"><span class="">ROOM</span></a>
+            <a href="#gallery"><span class="">GALLERY</span></a>
+            <a href="#review"><span class="">REVIEW</span></a>
+            <a href="#faq"><span class="">FAQ</span></a>
             <a href="#reservation" class="btn"> BOOK NOW</a>
         </nav>
 
@@ -183,11 +183,12 @@
             <a class="room-item" href="./room.html">
                 <img src="./assets/images/room-1.jpg" alt="room-1">
                 <div class="room-item__info">
-                    <div class="room-item__title">Grand Deluxe Room</div>
+                    <div class="room-item__title">Supreme Deluxe Room</div>
                     <div class="room-item__description">
-                        Embrace Paris in its purest neo-classical style, where
-                        up-to-the-minute amenities rub along with the charms of the past. You have to try our canopy
-                        beds at least once.
+                        The Supreme Deluxe Room at our luxurious hotel offers an unparalleled blend of elegance and
+                        comfort. This spacious and exquisitely appointed room is designed to cater to the most
+                        discerning guests. With contemporary decor, plush furnishings, and a serene color palette, the
+                        Supreme Deluxe Room creates an inviting and soothing atmosphere.
                     </div>
                 </div>
                 <div class="room-item__btn">Discover</div>
@@ -195,10 +196,11 @@
             <a class="room-item" href="./room.html">
                 <img src="./assets/images/room-2.jpg" alt="room-2">
                 <div class="room-item__info">
-                    <div class="room-item__title">Deluxe Room</div>
+                    <div class="room-item__title">Luxury Room</div>
                     <div class="room-item__description">
-                        In your canopy bed, gazing past prints from the Grand Siècle at your own marble fireplace, every
-                        guest can feel like royalty. Each Deluxe room is subtly distinctive; each is equally refined.
+                        The Luxury Room at our hotel is a haven of sophistication and comfort. This well-appointed room
+                        is designed for guests who appreciate a blend of style and relaxation. With a modern yet
+                        timeless decor, the Luxury Room provides an inviting and serene atmosphere for your stay.
                     </div>
                 </div>
                 <div class="room-item__btn">Discover</div>
@@ -206,27 +208,15 @@
             <a class="room-item" href="./room.html">
                 <img src="./assets/images/room-3.jpg" alt="room-3">
                 <div class="room-item__info">
-                    <div class="room-item__title">Executive Room</div>
+                    <div class="room-item__title">Deluxe Room</div>
                     <div class="room-item__description">
-                        Surround yourself with the quintessence of Parisian chic in a spacious, bright Executive Room at
-                        the Ritz Paris. A desk, an armchair, a fireplace and for some a rooftop view – and of course, a
-                        majestic king size canopy bed to call your own. And then, outside, ‘le tout Paris’!
+                        The Deluxe Room at our hotel offers a comfortable and inviting space for your stay. Designed
+                        with a classic yet modern touch, this room provides a welcoming atmosphere for both business and
+                        leisure travelers.
                     </div>
                 </div>
                 <div class="room-item__btn">Discover</div>
             </a>
-            <a class="room-item" href="./room.html">
-                <img src="./assets/images/room-4.jpg" alt="room-4">
-                <div class="room-item__info">
-                    <div class="room-item__title">Superior Room</div>
-                    <div class="room-item__description">
-                        Our Superior Rooms feature marble fireplaces, elaborate mirrors and sumptuous bathrooms.
-                        Unforgettable.
-                    </div>
-                </div>
-                <div class="room-item__btn">Discover</div>
-            </a>
-
     </section>
 
     <!-- Services -->
