--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- swiper js cdn link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./assets/style.css">
-    <title>room Booking</title>
+    <title>Room Booking</title>
 </head>
 
 <body>
