added room page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- header -->
     <header class="header">
 
-        <a href="#" class="logo"> <i class="fas fa-hotel"></i> Booking hotel </a>
+        <a href="#home" class="logo"> <i class="fas fa-hotel"></i> Booking hotel </a>
 
         <nav class="navbar">
             <a href="#home"><span class="current-section">HOME</span></a>
@@ -148,7 +148,7 @@
 
     </section>
 
-    </section>
+
 
     <!-- About -->
     <section class="about" id="about">
