update folder assets

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- swiper js cdn link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./assets/style.css">
-    <title>room Booking</title>
+    <link rel="stylesheet" href="./assets/styles/style.css">
+    <title>Booking Hotel</title>
 </head>
 
 <body>
@@ -504,7 +504,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
-    <script src="./assets/script.js"></script>
+    <script src="./assets/scripts/script.js"></script>
 
 </body>
 
