--- a/room.html
+++ b/room.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- swiper js cdn link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./assets/room.css">
+    <link rel="stylesheet" href="./assets/styles/room.css">
     <title>Hotel Booking</title>
 </head>
 
