--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <a href="#home" class="logo"> <i class="fas fa-hotel"></i> Booking hotel </a>
 
         <nav class="navbar">
-           <a href="#home">HOME</a>
-           <a href="#about">ABOUT</a>
-           <a href="#room">ROOM</a>
-           <a href="#gallery">GALLERY</a>
-           <a href="#review">REVIEW</a>
-           <a href="#faq">FAQ</a>
-           <a href="#reservation" class="btn"> BOOK NOW</a>
-           <button class="btnLogin-popup">Login</button>
+            <a href="#home">HOME</a>
+            <a href="#about">ABOUT</a>
+            <a href="#room">ROOM</a>
+            <a href="#gallery">GALLERY</a>
+            <a href="#review">REVIEW</a>
+            <a href="#faq">FAQ</a>
+            <!-- <a href="#reservation" class="btn"> BOOK NOW</a> -->
+            <button class="btnLogin-popup">Login</button>
 
         </nav>
         <div id="menu-btn" class="fas fa-bars"></div>
@@ -549,7 +549,7 @@
                 </div>
                 <div class="remember-forgot">
                     <label><input type="checkbox">I agree to the terms & conditions</label>
-                    
+
                 </div>
                 <button type="submit" class="btnButton">Register</button>
                 <div class="login-register">
@@ -563,38 +563,38 @@
 
     <section class="footer">
 
-    <div class="box-container">
+        <div class="box-container">
 
-       <div class="box">
-            <h3>CONTACT INFO</h3>
-            <a href="#"> <i class="fas fa-phone"></i> 0962189639 </a>
-            <a href="#"> <i class="fas fa-phone"></i> 0905168679</a>
-            <a href="#"> <i class="fas fa-envelope"></i> nhom9@gmail.com</a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> Thu Duc, TP Ho Chi Minh, Viet Nam</a>
-       </div>
+            <div class="box">
+                <h3>CONTACT INFO</h3>
+                <a href="#"> <i class="fas fa-phone"></i> 0962189639 </a>
+                <a href="#"> <i class="fas fa-phone"></i> 0905168679</a>
+                <a href="#"> <i class="fas fa-envelope"></i> nhom9@gmail.com</a>
+                <a href="#"> <i class="fas fa-map-marker-alt"></i> Thu Duc, TP Ho Chi Minh, Viet Nam</a>
+            </div>
 
-        <div class="box">
-            <h3>BOOKING INFO</h3>
-            <a href="#"> <i class="fas fa-arrow-right"></i> Refund policy</a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> Payment methods</a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> Terms & Conditions</a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> Privacy policy</a>
+            <div class="box">
+                <h3>BOOKING INFO</h3>
+                <a href="#"> <i class="fas fa-arrow-right"></i> Refund policy</a>
+                <a href="#"> <i class="fas fa-arrow-right"></i> Payment methods</a>
+                <a href="#"> <i class="fas fa-arrow-right"></i> Terms & Conditions</a>
+                <a href="#"> <i class="fas fa-arrow-right"></i> Privacy policy</a>
+            </div>
+
         </div>
 
-    </div>
+        <div class="share">
+            <a href="#" class="fab fa-facebook-f"></a>
+            <a href="#" class="fab fa-instagram"></a>
+            <a href="#" class="fab fa-twitter"></a>
+            <a href="#" class="fab fa-pinterest"></a>
+        </div>
 
-    <div class="share">
-        <a href="#" class="fab fa-facebook-f"></a>
-        <a href="#" class="fab fa-instagram"></a>
-        <a href="#" class="fab fa-twitter"></a>
-        <a href="#" class="fab fa-pinterest"></a>
-    </div>
+        <div class="credit">&copy; copyright @ 2023 by <span>nhom9</span></div>
 
-    <div class="credit">&copy; copyright @ 2023 by <span>nhom9</span></div>
+    </section>
 
- </section>
-
- <!-- end -->
+    <!-- end -->
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
